--- a/NewsApp/news-app/public/index.html
+++ b/NewsApp/news-app/public/index.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     />
 
-    <title>React App</title>
+    <title>News App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -26,5 +26,5 @@
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
     ></script>
-  </body>
+  </body> 
 </html>
